--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(zadanie2)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-lboost_program_options -lboost_system -lboost_filesystem")
 
-add_executable(netstore-client client.cpp connection.h)
-add_executable(netstore-server server.cpp connection.h)
+add_executable(netstore-client client.cpp connection.cpp)
+add_executable(netstore-server server.cpp connection.cpp)
